--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <div class="d-flex align-items-center">
           <span class="me-3 color-purple" id="days">--</span>
-          <h1 class="">days</h1>
+          <h1 class="days">days</h1>
         </div>
 
       </div>
